--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@vercel/speed-insights": "^1.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
